syntax = "proto3";
package rawapi;

option go_package = "/pb";

import "nil/services/rpc/rawapi/proto/common.proto";

message AccountRequest {
  Address address = 1;
  BlockReference blockReference = 2;
}

message BalanceResponse {
  oneof result {
    Error error = 1;
    Uint256 data = 2;
  }
}

message CodeResponse {
  oneof result {
    Error error = 1;
    bytes data = 2;
  }
}

message Tokens {
  map<string, Uint256> data = 1;
}

message TokensResponse {
  oneof result {
    Error error = 1;
    Tokens data = 2;
  }
}

message AsyncContext {
  bytes data = 1;
  uint64 responseProcessingGas = 2;
}

message RawContract {
  bytes contractSSZ = 1;
  bytes code = 2;
  bytes proofEncoded = 3;
  map<string, Uint256> storage = 4;
  map<string, Uint256> tokens = 5;
  map<uint64, AsyncContext> asyncContext = 6;
}

message RawContractResponse {
  oneof result {
    Error error = 1;
    RawContract data = 2;
  }
}
